test/conformance/kuttl/webhooks/dynamic-op-mutate/02-resource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: resource-no-signature.yaml
  shouldFail: false
