test/conformance/kuttl/webhooks/dynamic-op-mutate/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    webhook.kyverno.io/managed-by: kyverno
  name: kyverno-resource-mutating-webhook-cfg
webhooks:
- rules:
  - apiGroups:
    - ''
    apiVersions:
    - 'v1'
    operations:
    - CREATE
    resources:
    - 'pods'
    scope: '*'
